--- a/data/locales/en/LC_MESSAGES/bustime.po
+++ b/data/locales/en/LC_MESSAGES/bustime.po
@@ -63,6 +63,9 @@ msgstr "🔍 Choose a favourite stop"
 msgid "bus_stops_finish_add_stop"
 msgstr "✅ Saved stop: {name} - {id_stop}"
 
+msgid "bus_stops_finish_cancel"
+msgstr "❌ Stop not saved"
+
 # Arrival
 msgid "arrival_bus_times"
 msgstr "{sticker_time} {route_number} → {minutes} min"
