--- a/data/locales/ru/LC_MESSAGES/bustime.po
+++ b/data/locales/ru/LC_MESSAGES/bustime.po
@@ -68,7 +68,7 @@ msgstr "❌ Остановка не сохранена"
 
 # Arrival
 msgid "arrival_bus_times"
-msgstr "{sticker_time} {route_number} → {minutes} мин"
+msgstr "{sticker_time} {type_transport} {route_number} → {minutes} мин"
 
 msgid "arrival_bus_not"
 msgstr "В ближайшее время 🚌 не ожидается или такой 🚏 не существует"
