--- a/data/locales/en/LC_MESSAGES/bustime.po
+++ b/data/locales/en/LC_MESSAGES/bustime.po
@@ -68,7 +68,7 @@ msgstr "❌ Stop not saved"
 
 # Arrival
 msgid "arrival_bus_times"
-msgstr "{sticker_time} {route_number} → {minutes} min"
+msgstr "{sticker_time} {type_transport} {route_number} → {minutes} min"
 
 msgid "arrival_bus_not"
 msgstr "No 🚌 is expected in the near future or such a 🚏 does not exist"
