--- a/data/locales/ua/LC_MESSAGES/keyboards.po
+++ b/data/locales/ua/LC_MESSAGES/keyboards.po
@@ -11,6 +11,13 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 3.3.1\n"
 
+# Times
+msgid "minutes"
+msgstr "хв"
+
+msgid "seconds"
+msgstr "сек"
+
 # Keyboards
 msgid "bus_stops"
 msgstr "🚏 Мої зупинки"
@@ -35,3 +42,28 @@ msgstr "🔝 До головного меню"
 
 msgid "back_to_settings"
 msgstr "🔙 Назад до налаштувань"
+
+msgid "refresh"
+msgstr "🔄 Оновити"
+
+# Notification
+msgid "notification"
+msgstr "🔔 Налаштувати сповіщення"
+
+msgid "set_notification"
+msgstr "✅ Встановити"
+
+msgid "set_notification_time"
+msgstr "⏰ Встановіть час для повідомлення"
+
+msgid "done_set_notification_time"
+msgstr "👌 Повідомлення встановлено на {minutes} хвилин(и) та {seconds} секунд(и)"
+
+msgid "received_notification"
+msgstr "❗❗❗УВАГА❗❗❗\n"
+"\n"
+"🔔 Повідомлення про прибуття 🚌"
+
+# Notification errors
+msgid "error_set_notification"
+msgstr "🚫 Неможливо встановити повідомлення на 0 хвилин і 0 секунд"
