--- a/data/locales/ka/LC_MESSAGES/bustime.po
+++ b/data/locales/ka/LC_MESSAGES/bustime.po
@@ -38,11 +38,17 @@ msgstr "🔄 ენა წარმატებით შეიცვალა"
 msgid "setting_choose_bus_stop"
 msgstr "🚏 აირჩიეთ საგარემო, რომელიც გსურთ წაშლა"
 
+msgid "setting_choose_bus_stop_change"
+msgstr "🚏 აირჩიეთ გაჩერება, რომელიც უნდა შეცვალოთ"
+
 msgid "setting_delete_stop_true"
 msgstr "✅ საგარემო წარმატებით წაიშალა"
 
 msgid "setting_delete_stop_false"
 msgstr "❌ საგარემო ვერ წაიშალა. სცადეთ კიდევ"
+
+msgid "settings_bus_stop"
+msgstr "⚙️ ფავორიტების გაჩერებების პარამეტრები"
 
 # Bus stops
 msgid "bus_stops_no_bus_stops"
@@ -72,3 +78,28 @@ msgstr "{sticker_time} {type_transport} {route_number} → {minutes} წუთ"
 
 msgid "arrival_bus_not"
 msgstr "ახლომდელ დროს 🚌 არ იყოფება ან ასეთი 🚏 არ არსებობს"
+
+msgid "arrival_bus_stop_not_exists"
+msgstr "ასეთი 🚏 არ არსებობს"
+
+# Show alerts
+msgid "send_location"
+msgstr ""
+"გთხოვთ, გამოიყენეთ ბურთის ნიშანი 📎 და აირჩიოთ 'გაზიარების ადგილის გაზიარება', რათა გაუზიაროთ თქვენი მიმდევრობა.\n\n"
+"ჩვენ მიგაგზავნით მოწყობილობის მიხედვით მდიდარი გაჩერებები 😉"
+
+# Search stops
+msgid "found_stop_header"
+msgstr "*🚏 ახალი ავტობუსური გაჩერებები:*"
+
+msgid "found_stop"
+msgstr ""
+"{i} {name}\n"
+"კოდი: {code}, მანძილი: `{distance} კმ`"
+
+msgid "found_stop_footer"
+msgstr "*👇 შეგიძლიათ აირჩიოთ გაჩერება ქვემოთ, რათა ნახოთ ის რუკაზე 🌍 ან დაამატოთ რჩევებში ⭐*"
+
+msgid "found_stop_choose"
+msgstr ""
+"გაჩერება: {name}\nკოდი: {code}\n[ნახვა Google Maps-ზე]({map_link})"
