--- a/data/locales/ka/LC_MESSAGES/keyboards.po
+++ b/data/locales/ka/LC_MESSAGES/keyboards.po
@@ -20,7 +20,10 @@ msgstr "წამი"
 
 # Keyboards
 msgid "bus_stops"
-msgstr "🚏 ჩემი გაჩერებები"
+msgstr "🚏 ჩემი გაჩერების ადგილები"
+
+msgid "search_bus_stops"
+msgstr "🔎 ახლოს მდებარე გაჩერების ადგილების ძიება"
 
 msgid "settings"
 msgstr "⚙️ პარამეტრები"
@@ -32,38 +35,65 @@ msgid "change_language"
 msgstr "🌐 ენის შეცვლა"
 
 msgid "delete_bus_stop"
-msgstr "🚏 გაჩერების წაშლა"
+msgstr "🚏 გაჩერების ადგილის წაშლა"
 
 msgid "back"
 msgstr "🔙 უკან"
 
 msgid "back_to_main_menu"
-msgstr "🔝 მთავარი მენიუსკენ"
+msgstr "🔝 მთავარ მენიუში დაბრუნება"
 
 msgid "back_to_settings"
-msgstr "🔙 პარამეტრებში"
+msgstr "🔙 პარამეტრებში დაბრუნება"
 
 msgid "refresh"
-msgstr "🔄 განაახლეთ"
+msgstr "🔄 განახლება"
 
 # Notification
 msgid "notification"
-msgstr "🔔 შეტყობინების დაყენება"
+msgstr "🔔 შეტყობინებაზე დაყენება"
 
 msgid "set_notification"
-msgstr "✅ მზადაა"
+msgstr "✅ დაყენება"
 
 msgid "set_notification_time"
 msgstr "⏰ დააყენეთ შეტყობინების დრო"
 
 msgid "done_set_notification_time"
-msgstr "👌 შეტყობინება დაყენებულია {minutes} წუთი(ები)ზე და {seconds} წამ(ებ)ზე"
+msgstr "👌 შეტყობინებაზე დაყენებულია {minutes} წუთი და {seconds} წამი"
 
 msgid "received_notification"
 msgstr "❗❗❗ყურადღება❗❗❗\n"
 "\n"
-"🔔 შემოსვლის შეტყობინება 🚌"
+"🔔 შეტყობინება ადგილზე მისვლის შესახებ 🚌"
 
 # Notification errors
 msgid "error_set_notification"
-msgstr "🚫 შეუძლებელია შეტყობინების დაყენება 0 წუთისა და 0 წამისთვის"
+msgstr "🚫 არ შეიძლება შეტყობინებაზე დაყენება 0 წუთისა და 0 წამის შესახებ"
+
+# Admins
+msgid "count_users"
+msgstr "მომხმარებლების დათვლა"
+
+msgid "refresh_bus_stops_data"
+msgstr "გაჩერების ადგილების მონაცემების განახლება"
+
+msgid "back_to_admin_menu"
+msgstr "🔙 ადმინის მენიუში დაბრუნება"
+
+# Search stops
+msgid "add_current_bus_stop"
+msgstr "➕ საყვარელებში დამატება"
+
+msgid "search_check_arrival"
+msgstr "🕒 გაჩერების ადგილის განრიგის შემოწმება"
+
+# Setting
+msgid "settings_bus_stop"
+msgstr "⚙️ საყვარელი გაჩერების ადგილების პარამეტრები 🚏"
+
+msgid "change_name_bus_stop"
+msgstr "🔠 გაჩერების ადგილის სახელის შეცვლა"
+
+msgid "change_code_bus_stop"
+msgstr "🆔 გაჩერების ადგილის ID-ის შეცვლა"
