--- a/data/locales/ua/LC_MESSAGES/bustime.po
+++ b/data/locales/ua/LC_MESSAGES/bustime.po
@@ -38,11 +38,17 @@ msgstr "🔄 Мову успішно змінено"
 msgid "setting_choose_bus_stop"
 msgstr "🚏 Виберіть зупинку, яку хочете видалити"
 
+msgid "setting_choose_bus_stop_change"
+msgstr "🚏 Виберіть зупинку для зміни"
+
 msgid "setting_delete_stop_true"
 msgstr "✅ Зупинку успішно видалено"
 
 msgid "setting_delete_stop_false"
 msgstr "❌ Зупинку не видалено. Спробуйте ще раз"
+
+msgid "settings_bus_stop"
+msgstr "⚙️ Налаштування вибраних зупинок"
 
 # Bus stops
 msgid "bus_stops_no_bus_stops"
@@ -73,3 +79,28 @@ msgstr "{sticker_time} {type_transport} {route_number} → {minutes} хв"
 
 msgid "arrival_bus_not"
 msgstr "У найближчий час 🚌 не очікується або такої 🚏 не існує"
+
+msgid "arrival_bus_stop_not_exists"
+msgstr "Такої 🚏 не існує"
+
+# Show alerts
+msgid "send_location"
+msgstr ""
+"Будь ласка, скористайтеся значком 📎 та виберіть «Поділитися геолокацією», щоб поділитися своїм розташуванням.\n\n"
+"А ми надішлемо вам найближчі зупинки 😉"
+
+# Search stops
+msgid "found_stop_header"
+msgstr "*🚏 Найближчі автобусні зупинки:*"
+
+msgid "found_stop"
+msgstr ""
+"{i} {name}\n"
+"Код: {code}, Відстань: `{distance} км`"
+
+msgid "found_stop_footer"
+msgstr "*👇 За допомогою кнопок нижче ви можете вибрати зупинку, щоб подивитися її на мапі 🌍 або додати в улюблене ⭐*"
+
+msgid "found_stop_choose"
+msgstr ""
+"Зупинка: {name}\nКод: {code}\n[Переглянути на Google Maps]({map_link})"
