--- a/data/locales/en/LC_MESSAGES/keyboards.po
+++ b/data/locales/en/LC_MESSAGES/keyboards.po
@@ -20,7 +20,10 @@ msgstr "sec"
 
 # Keyboards
 msgid "bus_stops"
-msgstr "🚏 My bus stops"
+msgstr "🚏 My stops"
+
+msgid "search_bus_stops"
+msgstr "🔎 Find nearby stops"
 
 msgid "settings"
 msgstr "⚙️ Settings"
@@ -32,13 +35,13 @@ msgid "change_language"
 msgstr "🌐 Change language"
 
 msgid "delete_bus_stop"
-msgstr "🚏 Delete bus stop"
+msgstr "🚏 Delete stop"
 
 msgid "back"
 msgstr "🔙 Back"
 
 msgid "back_to_main_menu"
-msgstr "🔝 Back to main menu"
+msgstr "🔝 To main menu"
 
 msgid "back_to_settings"
 msgstr "🔙 Back to settings"
@@ -51,13 +54,13 @@ msgid "notification"
 msgstr "🔔 Set notification"
 
 msgid "set_notification"
-msgstr "✅ Done"
+msgstr "✅ Set"
 
 msgid "set_notification_time"
-msgstr "⏰ Set a time for the notification"
+msgstr "⏰ Set notification time"
 
 msgid "done_set_notification_time"
-msgstr "👌 Notification set for {minutes} minute(s) and {seconds} second(s)"
+msgstr "👌 Notification set for {minutes} minutes and {seconds} seconds"
 
 msgid "received_notification"
 msgstr "❗❗❗ATTENTION❗❗❗\n"
@@ -66,4 +69,31 @@ msgstr "❗❗❗ATTENTION❗❗❗\n"
 
 # Notification errors
 msgid "error_set_notification"
-msgstr "🚫 You can't set a notification for 0 minutes and 0 seconds"
+msgstr "🚫 Can't set notification for 0 minutes and 0 seconds"
+
+# Admins
+msgid "count_users"
+msgstr "Count users"
+
+msgid "refresh_bus_stops_data"
+msgstr "Refresh stop information"
+
+msgid "back_to_admin_menu"
+msgstr "🔙 Back to admin menu"
+
+# Search stops
+msgid "add_current_bus_stop"
+msgstr "➕ Add to favorites"
+
+msgid "search_check_arrival"
+msgstr "🕒 Check stop schedule"
+
+# Setting
+msgid "settings_bus_stop"
+msgstr "⚙️ Settings for favorite stops 🚏"
+
+msgid "change_name_bus_stop"
+msgstr "🔠 Change stop name"
+
+msgid "change_code_bus_stop"
+msgstr "🆔 Change stop ID"
