--- a/data/locales/ua/LC_MESSAGES/keyboards.po
+++ b/data/locales/ua/LC_MESSAGES/keyboards.po
@@ -22,6 +22,9 @@ msgstr "сек"
 msgid "bus_stops"
 msgstr "🚏 Мої зупинки"
 
+msgid "search_bus_stops"
+msgstr "🔎 Знайти найближчі зупинки"
+
 msgid "settings"
 msgstr "⚙️ Налаштування"
 
@@ -48,22 +51,50 @@ msgstr "🔄 Оновити"
 
 # Notification
 msgid "notification"
-msgstr "🔔 Налаштувати сповіщення"
+msgstr "🔔 Встановити повідомлення"
 
 msgid "set_notification"
 msgstr "✅ Встановити"
 
 msgid "set_notification_time"
-msgstr "⏰ Встановіть час для повідомлення"
+msgstr "⏰ Встановити час повідомлення"
 
 msgid "done_set_notification_time"
-msgstr "👌 Повідомлення встановлено на {minutes} хвилин(и) та {seconds} секунд(и)"
+msgstr "👌 Повідомлення встановлено на {minutes} хвилин і {seconds} секунд"
 
 msgid "received_notification"
-msgstr "❗❗❗УВАГА❗❗❗\n"
+msgstr ""
+"❗❗❗УВАГА❗❗❗\n"
 "\n"
 "🔔 Повідомлення про прибуття 🚌"
 
 # Notification errors
 msgid "error_set_notification"
 msgstr "🚫 Неможливо встановити повідомлення на 0 хвилин і 0 секунд"
+
+# Admins
+msgid "count_users"
+msgstr "Порахувати користувачів"
+
+msgid "refresh_bus_stops_data"
+msgstr "Оновити інформацію про зупинки"
+
+msgid "back_to_admin_menu"
+msgstr "🔙 Назад до меню адміністратора"
+
+# Search stops
+msgid "add_current_bus_stop"
+msgstr "➕ Додати до обраних"
+
+msgid "search_check_arrival"
+msgstr "🕒 Перевірити розклад зупинки"
+
+# Setting
+msgid "settings_bus_stop"
+msgstr "⚙️ Налаштування обраних зупинок 🚏"
+
+msgid "change_name_bus_stop"
+msgstr "🔠 Змінити назву зупинки"
+
+msgid "change_code_bus_stop"
+msgstr "🆔 Змінити ID зупинки"
