--- a/data/locales/ru/LC_MESSAGES/bustime.po
+++ b/data/locales/ru/LC_MESSAGES/bustime.po
@@ -54,7 +54,6 @@ msgstr "⚙️ Настройки избранных остановок"
 msgid "bus_stops_no_bus_stops"
 msgstr ""
 "🚫 У вас ещё нет избранных остановок\n"
-"\n"
 "🔠 Введите имя остановки:"
 
 msgid "bus_stops_name"
@@ -62,6 +61,9 @@ msgstr "🔠 Введите имя остановки:"
 
 msgid "bus_stops_id_stop"
 msgstr "🆔 Введите ID остановки:"
+
+msgid "click_for_cancel"
+msgstr "Для отмены -> /cancel"
 
 msgid "bus_stops_choose_bus_stop"
 msgstr "🔍 Выберите избранную остановку"
