--- a/data/locales/ua/LC_MESSAGES/bustime.po
+++ b/data/locales/ua/LC_MESSAGES/bustime.po
@@ -81,7 +81,7 @@ msgid "arrival_bus_times"
 msgstr "{sticker_time} {type_transport} {route_number} → {minutes} хв"
 
 msgid "arrival_bus_not"
-msgstr "У найближчий час 🚌 не очікується або такої 🚏 не існує"
+msgstr "У найближчий час 🚌 не очікується"
 
 msgid "arrival_bus_stop_not_exists"
 msgstr "Такої 🚏 не існує"
