--- a/data/locales/ua/LC_MESSAGES/bustime.po
+++ b/data/locales/ua/LC_MESSAGES/bustime.po
@@ -99,7 +99,7 @@ msgstr "*🚏 Найближчі автобусні зупинки:*"
 msgid "found_stop"
 msgstr ""
 "{i} {name}\n"
-"Код: {code}, Відстань: `{distance} км`"
+"Код: `{code}`, Відстань: `{distance} км`"
 
 msgid "found_stop_footer"
 msgstr "*👇 За допомогою кнопок нижче ви можете вибрати зупинку, щоб подивитися її на мапі 🌍 або додати в улюблене ⭐*"
