--- a/data/locales/ru/LC_MESSAGES/bustime.po
+++ b/data/locales/ru/LC_MESSAGES/bustime.po
@@ -20,7 +20,8 @@ msgstr ""
 "Здесь вы можете получить актуальное расписание, указав номер остановки. 🔢\n"
 "Просто введите номер, и мы предоставим вам информацию о приближающихся автобусах. 📋\n"
 "\n"
-"😊💡 Вы также можете добавить заметки к интересующей вас остановке для удобного отслеживания информации о ней. Для этого выберите пункт \"Мои остановки\" (/my_bus_stops) в меню и введите название остановки и её ID. 📝"
+"😊💡 Вы также можете добавить заметки к интересующей вас остановке для удобного отслеживания информации о ней. Для этого выберите пункт \"Мои остановки\" (/my_bus_stops) в меню и введите название остановки и её "
+"ID. 📝"
 
 # Settings
 msgid "setting_menu"
@@ -93,7 +94,8 @@ msgstr "Такой 🚏 не существует"
 # Show alerts
 msgid "send_location"
 msgstr ""
-"Пожалуйста, воспользуйтесь булавкой 📎 и выберите «Геопозиция», чтобы поделиться своим местоположением.\n\n"
+"Пожалуйста, воспользуйтесь булавкой 📎 и выберите «Геопозиция», чтобы поделиться своим местоположением.\n"
+"\n"
 "А мы отправим вам остановки поблизости 😉"
 
 # Search stops
@@ -103,15 +105,27 @@ msgstr "*🚏 Ближайшие автобусные остановки:*"
 msgid "found_stop"
 msgstr ""
 "{i} {name}\n"
-"Код: {code}, Расстояние: `{distance} км`"
+"Код: `{code}`, Расстояние: `{distance} км`"
 
 msgid "found_stop_footer"
 msgstr "*👇 По кнопкам ниже можете выбрать остановку, чтобы посмотреть ее на карте 🌍 или добавить в избранное ⭐*"
 
 msgid "found_stop_choose"
 msgstr ""
-"Остановка: {name}\nКод: {code}\n[Посмотреть на Google Maps]({map_link})"
+"Остановка: {name}\n"
+"Код: {code}\n"
+"[Посмотреть на Google Maps]({map_link})"
 
 # Help
+msgid "help"
+msgstr "💬 Помощь"
+
 msgid "help_main"
-msgstr "Если у вас возникли трудности с использованием бота, вы можете прочитать [Инструкцию]({instruction_link})"
+msgstr ""
+"Если у вас возникли трудности с использованием бота, вы можете прочитать инструкцию 👇"
+
+msgid "help_instruction"
+msgstr "Инструкция"
+
+msgid "help_instruction_link"
+msgstr "https://telegra.ph/Instrukciya-06-26-21"
