--- a/data/locales/ru/LC_MESSAGES/keyboards.po
+++ b/data/locales/ru/LC_MESSAGES/keyboards.po
@@ -22,6 +22,9 @@ msgstr "сек"
 msgid "bus_stops"
 msgstr "🚏 Мои остановки"
 
+msgid "show_bus_stops"
+msgstr "🌏 Остановки на карте"
+
 msgid "search_bus_stops"
 msgstr "🔎 Найти остановки поблизости"
 
