--- a/data/locales/en/LC_MESSAGES/bustime.po
+++ b/data/locales/en/LC_MESSAGES/bustime.po
@@ -9,18 +9,19 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.3.1\n"
+"X-Generator: Poedit 3.3.2\n"
 
 # Start message
 msgid "welcome_message"
-msgstr "🌟🚌 Welcome to BUSTIME - public transport schedule service in Tbilisi! 🚍🎉"
+msgstr "🌟🚌 Welcome to BUSTIME - your navigator through the public transport routes in Tbilisi! 🚍🎉"
 
 msgid "instructions_message"
 msgstr ""
-"Here you can get the current schedule by indicating the bus stop number. 🔢\n"
-"Just enter the number, and we will provide you with information about the approaching buses. 📋\n"
+"🔢 Our service provides up-to-date schedule information, which you can get by specifying the stop number. Now you can also view the route of a specific bus by simply entering its number.\n"
+"📋 Enter the stop or bus number, and we will immediately provide you with the necessary data.\n"
 "\n"
-"😊💡 You can also add notes to the bus stop you are interested in for easy tracking of its information. To do this, select the 'My stops' (/my_bus_stops) item in the menu and enter the name of the stop and its ID. 📝"
+"😊💡 You can also add notes to the stop you are interested in for convenient tracking of information about it. To do this, select the item \"My stops\" (/my_bus_stops) in the menu and enter the name of the stop and "
+"its ID. 📝"
 
 # Settings
 msgid "setting_menu"
@@ -33,67 +34,73 @@ msgid "setting_change_language"
 msgstr "🌐 Change language"
 
 msgid "setting_change_language_done"
-msgstr "🔄 Language changed successfully"
+msgstr "🔄 Language successfully changed"
 
 msgid "setting_choose_bus_stop"
-msgstr "🚏 Choose the stop you want to delete"
+msgstr "🚏 Select the stop you want to delete"
 
 msgid "setting_choose_bus_stop_change"
-msgstr "🚏 Choose the stop to modify"
+msgstr "🚏 Select the stop to modify"
 
 msgid "setting_delete_stop_true"
-msgstr "✅ Stop deleted successfully"
+msgstr "✅ Stop successfully deleted"
 
 msgid "setting_delete_stop_false"
-msgstr "❌ Stop was not deleted. Try again"
+msgstr "❌ Stop was not deleted. Please try again"
 
 msgid "settings_bus_stop"
-msgstr "⚙️ Settings of favorite stops"
+msgstr "⚙️ Settings for favorite stops"
 
 # Bus stops
 msgid "bus_stops_no_bus_stops"
 msgstr ""
-"🚫 You have no favourite stops yet\n"
-"\n"
+"🚫 You don't have any favorite stops yet\n"
 "🔠 Enter the name of the stop:"
 
 msgid "bus_stops_name"
 msgstr "🔠 Enter the name of the stop:"
 
 msgid "bus_stops_id_stop"
-msgstr "🆔 Enter the ID of the stop:"
+msgstr "🆔 Enter the stop ID:"
 
 msgid "click_for_cancel"
-msgstr "For cancellation -> /cancel"
+msgstr "To cancel -> /cancel"
 
 msgid "bus_stops_choose_bus_stop"
-msgstr "🔍 Choose a favourite stop"
+msgstr "🔍 Select a favorite stop"
 
 msgid "bus_stops_finish_add_stop"
-msgstr "✅ Saved stop: {name} - {id_stop}"
+msgstr "✅ Stop saved: {name} - {id_stop}"
 
 msgid "bus_stops_finish_cancel"
 msgstr "❌ Stop not saved"
 
+msgid "change_name_bus_stops_cancel"
+msgstr "❌ Name not changed"
+
+msgid "change_code_bus_stops_cancel"
+msgstr "❌ ID not changed"
+
 # Arrival
 msgid "arrival_bus_times"
-msgstr "{sticker_time} {type_transport} {route_number} → {minutes} min  {destination_name}"
+msgstr "{sticker_time} {type_transport} {route_number} → {minutes} min {destination_name}"
 
 msgid "arrival_bus_not"
-msgstr "No 🚌 is expected in the near future"
+msgstr "No 🚌 expected in the near future"
 
-msgid "arrival_bus_stop_not_exists"
-msgstr "Such a 🚏 does not exist"
+msgid "arrival_bus_stop_or_bus_not_exists"
+msgstr "Such a 🚏 or 🚌 does not exist"
 
 # Show alerts
-msgid "send_location"
-msgstr ""
-"Please use the pin icon 📎 and select 'Share Location' to share your current location.\n\n"
-"We will send you the nearby bus stops 😉"
-
 # Search stops
+msgid "search_bus_stops_menu"
+msgstr "🔎 Search for stops"
+
+msgid "search_bus_stops_descript"
+msgstr "Using the buttons below 👇 select the way to find stops"
+
 msgid "found_stop_header"
-msgstr "*🚏 Nearest Bus Stops:*"
+msgstr "*🚏 Nearest bus stops:*"
 
 msgid "found_stop"
 msgstr ""
@@ -101,8 +108,33 @@ msgstr ""
 "Code: `{code}`, Distance: `{distance} km`"
 
 msgid "found_stop_footer"
-msgstr "*👇 You can select a stop below to view it on the map 🌍 or add it to favorites ⭐*"
+msgstr "👇 Using the buttons below you can select the stop to view it on the map 🌍 or add to favorites ⭐"
 
 msgid "found_stop_choose"
 msgstr ""
-"Stop: {name}\nCode: {code}\n[View on Google Maps]({map_link})"
+"Stop: {name}\n"
+"Code: {code}\n"
+"[View on Google Maps]({map_link})"
+
+# Help
+msgid "help"
+msgstr "💬 Help"
+
+msgid "help_main"
+msgstr "If you are having trouble using the bot, you can read the instructions 👇"
+
+msgid "help_instruction"
+msgstr "Instructions"
+
+msgid "help_instruction_link"
+msgstr "https://telegra.ph/Instrukciya-06-25-10"
+
+# Search bus route
+msgid "choose route"
+msgstr "Directions of bus No.{route_number}:"
+
+msgid "route 1"
+msgstr "1⃣ {first_route}"
+
+msgid "route 2"
+msgstr "2⃣ {second_route}"
